--- a/CSS/about.css
+++ b/CSS/about.css
@@ -642,3 +642,8 @@ h4 {
     }
 
 }
+@media screen and (max-width:480px){
+    .creative .modal-content {
+        height: 35rem !important;
+    }
+}
