--- a/CSS/Blogpost.css
+++ b/CSS/Blogpost.css
@@ -149,3 +149,8 @@ button.owl-next {
 }
 
 
+@media screen and (max-width:768px){
+  .list-single__content{
+    grid-template-columns: repeat(1,1fr);
+  }
+}
