--- a/CSS/BlogSinger.css
+++ b/CSS/BlogSinger.css
@@ -3,7 +3,9 @@
   margin: 0 auto;
   padding: 0;
 }
-
+.header .nav-link {
+padding-left: 10px !important;
+}
 a:hover {
   text-decoration: none !important;
 }
@@ -228,4 +230,9 @@ a:hover {
   padding: 15px 20px;
 }
 
+@media screen and (max-width:992px) {
+  .creative .modal-content {
+      height: 35rem !important;
+  }
+}
 /*# sourceMappingURL=BlogSinger.css.map */
