--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,61 +6,82 @@
   --translateY: translateY(-10px);
   --trainsition05s: all 0.5s;
 }
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-   --bs-gutter-x: 0rem!important;
-   padding: 0 1rem!important ;
+
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  --bs-gutter-x: 0rem !important;
+  padding: 0 1rem !important;
 }
+
 .row {
-   --bs-gutter-x: 0rem;
+  --bs-gutter-x: 0rem;
 }
-.col-lg-4.col-md-6.mt-5,.col-lg-4.col-sm-6,.col-md-6,.col-xs-12 .col-md-6, .col-md-3{
+
+.col-lg-4.col-md-6.mt-5,
+.col-lg-4.col-sm-6,
+.col-md-6,
+.col-xs-12 .col-md-6,
+.col-md-3,.col-md-4 {
   padding: 0 1rem 0 1rem;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-html{
+
+html {
   font-size: 16px;
 }
-body{
-width: 100%;
-height: 100vh;
-font-size: 1.125rem;
+
+body {
+  width: 100%;
+  height: 100vh;
+  font-size: 1.125rem;
   font-family: -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  Oxygen-Sans,
-  Ubuntu,
-  Cantarell,
-  "Helvetica Neue",
-  sans-serif;
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    "Helvetica Neue",
+    sans-serif;
   overflow-x: hidden;
 }
-img{
+
+img {
   display: block;
   max-width: 100%;
   width: 100%;
   object-fit: cover;
 }
-a{
+
+a {
   text-decoration: none;
 }
-li{
+
+li {
   list-style: none;
 }
+
 input,
 button,
-textarea{
+textarea {
   outline: none;
   font-size: 1.125rem;
 }
-textarea{
+
+textarea {
   resize: none;
 }
-button{
+
+button {
   cursor: pointer;
 }
