--- a/CSS/BlogSinger.css
+++ b/CSS/BlogSinger.css
@@ -250,6 +250,9 @@ a:hover {
   .blog-content h4 a{
     font-size: 1.8rem;
   }
+  .post-navigation label{
+    font-size: 1.1rem;
+  }
 }
 
 @media screen and (max-width: 480px){
@@ -286,5 +289,10 @@ h3.text-left{
 .related-post .col-sm-6{
   margin-bottom: 2rem;
 }
-
+.text.max-width.text-left{
+  padding: 0;
+}
+section.comments.max-width.my-5 {
+    padding: 0.6rem;
+}
 }
