--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,7 +26,7 @@
 .col-lg-4.col-sm-6,
 .col-md-6,
 .col-xs-12 .col-md-6,
-.col-md-3,.col-md-4 {
+.col-md-3,.col-md-4,.col-sm-6 {
   padding: 0 1rem 0 1rem;
 }
 
